# python-ui-framework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
allure-reports/: emailable-report-allure-docker-service.html
allure-results/: 23cf25ea-bff0-46c3-ad3a-51cb73fcc354-result.json  319f458c-8da5-4b40-a180-77413287f887-container.json  53e6b13a-ec50-46ad-acc1-5cda3f8e408a-container.json  9943155c-b32e-457f-9213-15df28653037-container.json  a97de380-ffbe-4582-9d10-7a68b0ec9339-container.json
allure_reports/: 0ad1b72a-2163-4ec9-bcc0-3356536a900c-container.json  28c7f556-2468-4351-9004-61abf3a8bf53-container.json  371a3036-ebb5-4310-8cfa-0a114c650825-container.json  3c510057-7a99-4153-bddc-216b0d5f806a-container.json  4abedf29-05d6-4783-a3a0-5741394711ff-result.json  654907a1-0b9d-4c85-af8a-44decbd98139-result.json  782457eb-3db2-4dca-92ad-80fcd8d85faf-container.json  a32d23f5-e1b1-41f2-bb3d-cf4ae35aa1c9-container.json  a5598b15-5b48-4e68-bed3-bfdb62f149e5-result.json  c1ada3f8-7693-485d-bb99-e4c55a3bf39f-container.json  c7a431a6-91ed-459d-b52d-19dae32072af-container.json  d6dbf551-f8f3-4e5a-8b27-2e2022480fde-container.json  e233828b-7c56-4542-b8e1-c6d3b6e5b829-container.json  f26293dd-1e0b-469e-a492-d66a9f61f3f4-container.json  ff7e681f-e872-4e63-92c7-b19abc0e72c3-container.json
framework/: README.md  utils.py  webpage.py
jenkins_in_docker/: Dockerfile  README.md
jenkinsfiles/: Jenkinsfile  JenkinsfileForDinD  JenkinsfileOutdated  JenkinsfileTest
tests/: README.md  conftest.py  test_hw_22.py  (+4 more)
(+945 files in other folders)
