[tool.poetry]
name = "automated-ui-tests"
version = "0.1.0"
description = "A framework to run automated UI tests."
authors = ["V.Hrabrov <vkhrabrov94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
pytest = "^6.2.5"
selenium = "^4.1.0"
requests = "^2.27.1"
allure-pytest = "2.9.45"
pre-commit = "2.16.0"
loguru = "^0.6.0"
Faker = "^13.15.0"
pytest-rerunfailures = "^10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"